# vmod-wasm

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: ci.yml
examples/rust/: Cargo.toml
examples/rust/src/: lib.rs
plan/: feature-vmod-wasm-1.md
src/: Makefile.am  host_functions.c  host_functions.h  proxy_wasm.c  proxy_wasm.h  vmod_wasm.c  vmod_wasm.vcc  wasm_engine.c  wasm_engine.h
tests/: allow_decision.vtc  basic_load.vtc  block_decision.vtc  error_handling.vtc  fuel_exhaustion.vtc  host_block_bot.vtc  host_header.vtc  host_url_method.vtc  memory_limit.vtc  proxy_wasm_basic.vtc  proxy_wasm_block.vtc  resource_config.vtc
tests/wasm/: test_module.wasm
